<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
			  android:layout_width="266dp"
			  android:layout_height="256dp"
			  android:orientation="vertical">
	<LinearLayout android:layout_width="match_parent"
				  android:layout_height="42dp"
				  android:background="@drawable/player_pop_top">
		<TextView
			android:id="@+id/player_pop_item1"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:layout_weight="1"
			android:gravity="center"
			android:text="@string/sort_alert_item1"
			android:textColor="@color/write"
			android:textSize="13.3sp"/>
		<TextView android:id="@+id/player_pop_item2"
				  android:layout_width="match_parent"
				  android:layout_height="match_parent"
				  android:layout_weight="1"
				  android:background="@color/press_title_color"
				  android:gravity="center"
				  android:text="@string/sort_alert_item2"
				  android:textColor="@color/write"
				  android:textSize="13.3sp"/>
		<TextView android:id="@+id/player_pop_item3"
				  android:layout_width="match_parent"
				  android:layout_height="match_parent"
				  android:layout_weight="1"
				  android:gravity="center"
				  android:text="@string/sort_alert_item3"
				  android:textColor="@color/write"
				  android:textSize="13.3sp"/>
		<TextView android:id="@+id/player_pop_item4"
				  android:layout_width="match_parent"
				  android:layout_height="match_parent"
				  android:layout_weight="1"
				  android:gravity="center"
				  android:text="@string/sort_alert_item4"
				  android:textColor="@color/write"
				  android:textSize="13.3sp"/>


	</LinearLayout>

	<android.support.v7.widget.RecyclerView

		android:id="@+id/player_pop_recv"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:overScrollMode="never"
		android:background="@drawable/player_pop_bottom">

	</android.support.v7.widget.RecyclerView>
</LinearLayout>