<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:id="@+id/activity_setting"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical"
>
	<include layout="@layout/titlebar2"></include>
	<FrameLayout android:layout_width="match_parent" android:layout_height="48dp" android:layout_marginTop="10dp"
				 android:background="@color/write">

		<TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
				  android:layout_gravity="center_vertical"
				  android:layout_marginLeft="20dp" android:text="@string/fiel_setting_item1"
				  android:textColor="#1a1a1a" android:textSize="13.3sp"/>
		<Switch android:id="@+id/switch1"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_gravity="right|center_vertical" android:layout_marginRight="20dp"/>
	</FrameLayout>
	<LinearLayout android:layout_width="match_parent" android:layout_height="0.3dp" android:layout_marginLeft="20dp"
				  android:layout_marginRight="20dp" android:background="#cccccc"></LinearLayout>
	<FrameLayout android:layout_width="match_parent" android:layout_height="48dp"
				 android:background="@color/write">

		<TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
				  android:layout_gravity="center_vertical"
				  android:layout_marginLeft="20dp" android:text="@string/fiel_setting_item2"
				  android:textColor="#1a1a1a" android:textSize="13.3sp"/>
		<Switch android:id="@+id/switch2"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_gravity="right|center_vertical" android:layout_marginRight="20dp"/>
	</FrameLayout>
	<LinearLayout android:layout_width="match_parent" android:layout_height="0.3dp" android:layout_marginLeft="20dp"
				  android:layout_marginRight="20dp" android:background="#cccccc"></LinearLayout>

	<FrameLayout android:layout_width="match_parent" android:layout_height="48dp"
				 android:background="@color/write">

		<TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
				  android:layout_gravity="center_vertical"
				  android:layout_marginLeft="20dp" android:text="@string/fiel_setting_item3"
				  android:textColor="#1a1a1a" android:textSize="13.3sp"/>
		<Switch android:id="@+id/switch3"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_gravity="right|center_vertical" android:layout_marginRight="20dp"/>
	</FrameLayout>
	<LinearLayout android:layout_width="match_parent" android:layout_height="0.3dp" android:layout_marginLeft="20dp"
				  android:layout_marginRight="20dp" android:background="#cccccc"></LinearLayout>



</LinearLayout>
